--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,14 @@
 <resources>
     <string name="app_name">shared</string>
+    <string name="name">name</string>
+    <string name="class">Class</string>
+    <string name="age">Age</string>
+    <string name="submit">Submit</string>
+    <string name="signup_form">signup form</string>
+    <string name="enter_your_name">enter your name</string>
+    <string name="enter_phone_no">enter phone no</string>
+    <string name="enter_age">enter age</string>
+    <string name="hello">Hello</string>
+    <string name="yes">Yes</string>
+    <string name="no">No</string>
 </resources>
